tests/rosetta/out/Smalltalk/csv-to-html-translation-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| c rows line row cells cell |
c := ((((((((('Character,Speech
' + ('The multitude,The messiah! Show us the messiah!
'))) + ('Brians mother,<angry>Now you listen here! He''s not the messiah; he''s a very naughty boy! Now go away!</angry>
'))) + ('The multitude,Who are you?
'))) + ('Brians mother,I''m his mother; that''s who!
'))) + ('The multitude,Behold his mother! Behold his mother!')).
rows := {}.
split value: c value: '
' do: [:line |.
rows := rows copyWith: split value: line value: ','.
].
.
Transcript show: '<table>'; cr.
rows do: [:row |.
cells := ''.
row do: [:cell |.
cells := (((((cells + '<td>')) + cell)) + '</td>').
].
.
Transcript show: ((((('    <tr>') + cells)) + '</tr>')) printString; cr.
].
.
Transcript show: '</table>'; cr.
